# rt-challenge

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: dev-mode.cmake  lint-targets.cmake  lint.cmake  variables.cmake
src/: lib.cpp  lib.hpp  main.cpp  point.cpp  point.hpp  util.hpp  vector.cpp  vector.hpp
tests/: CMakeLists.txt
tests/src/: point.test.cpp  test.cpp  util.test.cpp  vector.test.cpp
